# activate-os-exec

./: .gitignore  README.md  act.sh  activate_abc.txt  ardhc.py  ps1.sh  pyproject.toml  sum.sh  test_os.py  test_os_main.py  test_os_v2.py
prototype/: posix_os_exec_shell.sh  ppws.py  pyproject.toml
tests/: test_ardhc.py
