[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ardhc"
version = "1.0"
description = "Plugin for POSIX shells that calls the conda processes used for activate, deactivate, reactivate, hook, and command"
requires-python = ">=3.7"
dependencies = ["conda"]

[project.entry-points.conda]
captain-planet = "ardhc"

[tool.setuptools]
py-modules = ["ardhc"]