[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ardhc"
version = "1.0"
description = "Plugin for POSIX shells to facilitate activate, deactivate, and reactivate"
requires-python = ">=3.7"
dependencies = ["conda"]

[project.entry-points.conda]
ardhc = "ardhc"

[tool.setuptools]
py-modules = ["ardhc"]